Fixing the sidenav on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -139,4 +139,9 @@ $color: #000;
   .toolbar .toolbar-top .search-field {
     min-width: 150px;
   }
+
+  h3 {
+    padding-top: 10px;
+    padding-left: 10px;
+  }
 }
